--- a/docs/Doxyfile.in
+++ b/docs/Doxyfile.in
@@ -46,7 +46,8 @@ SEPARATE_MEMBER_PAGES  = NO
 TAB_SIZE               = 8
 # if you add/change aliases make sure you also change the sed lines in the Makefile
 ALIASES                = TOOL_VERSION=X.Y.Z FRONT_END=drmemory.pl \
-                         FRONT_END_PATH=drmemory.pl PLATFORM=Linux
+                         FRONT_END_PATH=drmemory.pl PLATFORM=Linux \
+                         DRCONFIG_PATH=drconfig
 OPTIMIZE_OUTPUT_FOR_C  = YES
 OPTIMIZE_OUTPUT_JAVA   = NO
 BUILTIN_STL_SUPPORT    = NO
