i#329 follow-up: install drconfig.exe
SVN-Revision: 219

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -919,6 +919,7 @@ if (WIN32)
     install(FILES
       ${PROJECT_BINARY_DIR}/${BUILD_BIN}/drconfiglib.dll
       ${PROJECT_BINARY_DIR}/${BUILD_BIN}/drinjectlib.dll
+      ${PROJECT_BINARY_DIR}/${BUILD_BIN}/drconfig.exe
       DESTINATION "${INSTALL_BIN}"
       PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE
       WORLD_READ WORLD_EXECUTE)
